# fumola-lang

./: README.md  index.md
rust/: Cargo.toml  build.rs
rust/src/lib/: ast.rs  cbpv.rs  check.rs  error.rs  format.rs  mod.rs  parser.lalrpop  step.rs
rust/tests/: fumola_core.rs
src/ott/: .gitignore  examples.mng  fumola.ott  overview.mng  related.tex  runOtt.sh  scratch.ott
