[package]
name = "fumola"
version = "0.1.0"
authors = ["Matthew Hammer"]
edition = "2018"

[build-dependencies]
lalrpop = "0.19"
chrono = "0.4"
clap = "2.33"
structopt = "0.2"
log = "0.4"

[dependencies.candid]
git = "https://github.com/dfinity/candid"
branch = "master"

[dependencies]
log = "0.4"
ansi_term = "0.12"
anyhow = "1.0"
clap = "2.33"
codespan-reporting = "0.11"
env_logger = "0.6"
futures = "0.3.5"
garcon = "0.2.3"
hex = "0.4.2"
ic-agent = "0.5.0"
ic-types = "0.1.3"
lalrpop-util = "0.19"
logos = "0.12"
num-bigint = "0.2.6"
num-traits = "0.2.6"
pem = "0.8"
pretty = "0.10.0"
pretty_assertions = "0.7"
rand = "0.8"
ring = "0.16"
ron = "*"
rustyline = "8.2"
rustyline-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.9"
serde_json = "1.0"
shellexpand = "2.1"
structopt = "0.3.16"
terminal_size = "0.1"
tokio = { version = "1.6.0", features = ["full"] }

[lib]
name = "fumola"
path = "src/lib/mod.rs"
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[[bin]]
name = "fumola"
path = "src/bin/fumola.rs"